benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_Add_iter8_error.log
=== Verification Error - Iteration 8 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_Add.rs
Time: 2025-09-15 18:59:30

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0282]: type annotations needed
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:119:66
    |
119 |             assert(Exp_int(Str2Int(sx@), 0nat) % Str2Int(sz@) == 1 % Str2Int(sz@) == 1);
    |                                                                  ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
    |
help: consider specifying the generic argument
    |
119 |             assert(Exp_int(Str2Int(sx@), 0nat) % Str2Int(sz@) == 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> % Str2Int(sz@) == 1);
    |                                                                   +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:137:89
    |
137 |             res as nat % modz as nat * (b as nat % modz as nat) == Exp_int(base as nat, exp_val - e as nat) % modz as nat,
    |                                                                    -------              ^^^^^^^^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                    |
    |                                                                    arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.

--------------------------------------------------------------------------------

Additional Output:
error[E0282]: type annotations needed
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:119:66
    |
119 |             assert(Exp_int(Str2Int(sx@), 0nat) % Str2Int(sz@) == 1 % Str2Int(sz@) == 1);
    |                                                                  ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
    |
help: consider specifying the generic argument
    |
119 |             assert(Exp_int(Str2Int(sx@), 0nat) % Str2Int(sz@) == 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> % Str2Int(sz@) == 1);
    |                                                                   +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:137:89
    |
137 |             res as nat % modz as nat * (b as nat % modz as nat) == Exp_int(base as nat, exp_val - e as nat) % modz as nat,
    |                                                                    -------              ^^^^^^^^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                    |
    |                                                                    arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
